# opencv_camera

catkin_ws/src/opencv_camera/: CMakeLists.txt  package.xml
catkin_ws/src/opencv_camera/src/: image_pub.cpp
